<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.achristson.interviewreminder.viewmodels.AddInterviewViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        app:layoutDescription="@xml/layout"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/add_interview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:textColor="?colorOnPrimary"
            android:text="@string/add_interview_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/conpany_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:textColor="?colorOnPrimary"
            android:padding="8dp"
            android:text="@string/company_name_label"
            android:textSize="19sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/add_interview_title"
            tools:text="Company name: " />

        <Button
            android:id="@+id/date_picker_button"
            style="?spinnerStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?colorPrimary"
            android:text="@string/date_picker_text"
            android:textColor="?colorOnPrimary"
            app:layout_constraintBaseline_toBaselineOf="@+id/date_label"
            app:layout_constraintStart_toStartOf="@+id/guideline2" />

        <EditText
            android:id="@+id/company_name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@{viewModel.company}"
            android:hint="@string/company_name_hint"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/conpany_name_label"
            app:layout_constraintStart_toEndOf="@+id/conpany_name_label" />

        <TextView
            android:id="@+id/date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="?colorOnPrimary"
            android:padding="8dp"
            android:text="@string/date_label"
            android:textSize="19sp"
            app:layout_constraintStart_toStartOf="@+id/conpany_name_label"
            app:layout_constraintTop_toBottomOf="@+id/conpany_name_label" />

        <TextView
            android:id="@+id/time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="?colorOnPrimary"
            android:padding="8dp"
            android:text="@string/time_label"
            android:textSize="19sp"
            app:layout_constraintStart_toStartOf="@+id/date_label"
            app:layout_constraintTop_toBottomOf="@+id/date_label" />

        <Button
            android:id="@+id/time_picker_button"
            style="?spinnerStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="?colorPrimary"
            android:text="@string/time_picker_text"
            android:textColor="?colorOnPrimary"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/date_picker_button" />

        <TextView
            android:id="@+id/notes_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:padding="8dp"
            android:textColor="?colorOnPrimary"
            android:text="@string/notes_label"
            android:textSize="19sp"
            app:layout_constraintStart_toStartOf="@+id/time_label"
            app:layout_constraintTop_toBottomOf="@+id/time_label" />

        <EditText
            android:id="@+id/notes_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/notes_hint"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/notes_label"
            app:layout_constraintStart_toStartOf="@+id/guideline2" />

        <Button
            android:id="@+id/save_interview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_interview_button_text"
            android:textColor="?colorOnPrimary" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="135dp" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>